@@ -22,7 +22,7 @@ int main( int argc, char *argv[] ){
 		MLV_COLOR_MAGENTA
 	);
 
-	MLV_actualise_window();
+	MLV_update_window();
 
 	MLV_wait_seconds( 10 );
 
