@@ -145,7 +145,7 @@ void affichage( int nb, int width, int height ){
 	//
 	// Met à jour la fenêtre
 	//
-	MLV_actualise_window();
+	MLV_update_window();
 }
 
 
