@@ -2,6 +2,8 @@ mlv-2.0.2-dev
  * Documentation
    * Correct documentation for making a MacOSX package (doxygen compilation)
    * Improve the part explaining how to make a release of MLV.
+ * Example
+   * Change MLV_actualise_window by MLV_update_window
 
 mlv-2.0.2
  * Window :
